Fjerner mapping av AKTIV-kolonnen